rather than show the deviation from the ideal, show the adjustments the user needs to make

--- a/editor/source/css/main.scss
+++ b/editor/source/css/main.scss
@@ -35,6 +35,12 @@ body {
   color: #fff;
   overflow-x: hidden;
   overflow-y: auto;
+  #metrics-header {
+    padding: 0.5em;
+    margin-bottom: 0.5em;
+    font-weight: bold;
+    border-bottom: 1px solid #fff;
+  }
 }
 
 // dat.gui
