--- a/editor/source/css/main.scss
+++ b/editor/source/css/main.scss
@@ -39,7 +39,6 @@ body {
     padding: 0.5em;
     margin-bottom: 0.5em;
     font-weight: bold;
-    border-bottom: 1px solid #fff;
   }
 }
 
@@ -57,14 +56,16 @@ fieldset {
 }
 
 table {
+  width: 100%;
+  table-layout: fixed;
   text-align: center;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  th {
-    font-weight: bold;
+  tr.fade {
+    opacity: 0.3;
   }
-  th, td {
+  td {
     padding: 0.3em;
   }
 }
