--- a/editor/source/css/main.scss
+++ b/editor/source/css/main.scss
@@ -2,7 +2,7 @@
 @import 'reset';
 
 $font-stack: 'Fira Sans', sans-serif;
-$sidebar-width: 300px;
+$sidebar-width: 250px;
 
 body {
   margin: 0;
@@ -35,6 +35,7 @@ body {
   color: #fff;
   overflow-x: hidden;
   overflow-y: auto;
+  padding-top: 15px;
   #metrics-header {
     padding: 0.5em;
     margin-bottom: 0.5em;
@@ -48,10 +49,16 @@ body {
 }
 
 fieldset {
-  padding: 0.5em;
+  padding: 15px;
   label {
     display: inline-block;
     width: $sidebar-width * 0.3;
+  }
+  a.export {
+    background-color: #1144bb;
+    border-radius: 5px;
+    padding: 0.5em 0.75em;
+    cursor: pointer;
   }
 }
 
