add metric per tile stat

--- a/editor/source/css/main.scss
+++ b/editor/source/css/main.scss
@@ -56,8 +56,10 @@ a {
   }
   #metrics-header {
     padding: 0.5em;
+  }
+  #metrics-ideal {
+    padding: 0.5em;
     margin-bottom: 0.5em;
-    font-weight: bold;
   }
 }
 
