--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -110,3 +110,13 @@ table {
     width: 0%;
   }
 }
+
+#toolSelector {
+  span {
+    display: inline-block;
+    margin-right: 1em;
+    &.active {
+      font-weight: bold
+    }
+  }
+}
