--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -125,7 +125,7 @@ fieldset {
     width: $sidebar-width * 0.3;
     margin-bottom: 6px;
   }
-  a.export, a.import {
+  a.export {
     background-color: $blue;
     border-radius: 5px;
     padding: 0.5em 0.75em;
@@ -133,8 +133,8 @@ fieldset {
     margin: 0;
     font-size: 80%;
   }
-  input.import {
-    margin: 10px 5px 0 5px;
+  a.import {
+    margin: 0;
   }
 }
 
