Push credits out of column

--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -38,7 +38,16 @@ a {
   }
 }
 
-#ui {
+.credits {
+  position: fixed;
+  bottom: 5px;
+  left: 0;
+  right: 0;
+  font-size: 9pt;
+  text-align: center;
+}
+
+#ui .column {
   position: fixed;
   top: 0;
   left: 0;
@@ -58,7 +67,7 @@ a {
     font-size: 200%;
     line-height: 1.2em;
   }
-  h1, h2 {
+  h1 {
     padding: 15px;
   }
   .csv-input {
