--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -27,12 +27,17 @@ a {
 
 .padding-bottom {
   padding-bottom: 20px;
+  box-sizing: border-box;
 }
 
 .deselected {
   opacity: 0.4;
   transition: opacity 0.3s ease-in-out;
   pointer-events: none;
+}
+
+.collapsed {
+  display: none;
 }
 
 .step {
@@ -50,14 +55,19 @@ a {
   .highlight-bar {
     position: absolute;
     bottom: 0px;
-    width: 6px;
+    width: 0px;
+    height: 100%;
     background-color: $blue;
-    height: 0%;
-    transition: height 0.22s ease-in-out;
+    transition: width 0.22s ease-in-out;
+  }
+  &:hover {
+    .highlight-bar {
+      width: 3px;
+    }
   }
   &.active {
     .highlight-bar {
-      height: 100%;
+      width: 6px;
     }
   }
 }
@@ -94,7 +104,6 @@ a {
   color: #fff;
   overflow-x: hidden;
   overflow-y: auto;
-  padding-top: 15px;
   hr {
     border: none;
     height: 1px;
@@ -102,11 +111,15 @@ a {
     background-color: #444;
   }
   h1 {
+    padding-top: 15px;
     font-size: 200%;
     line-height: 1.2em;
   }
   h1 {
     padding: 15px;
+  }
+  .scroll-ui {
+    overflow: scroll;
   }
   .ui-controls {
     padding: 0 10px;
@@ -153,7 +166,8 @@ a {
     }
   }
   .metrics {
-    padding: 8px;
+    padding: 0 8px;
+    overflow: scroll;
   }
   #metrics-header {
     padding-bottom: 0.5em;
