inline buttons, convert colors to hex strings for illustrator

--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -229,6 +229,12 @@ fieldset {
   }
 }
 
+.no-scroll-ui {
+  fieldset {
+    display: inline-block;
+  }
+}
+
 table {
   width: 100%;
   table-layout: fixed;
