--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -213,6 +213,9 @@ fieldset {
     width: $sidebar-width * 0.3;
     margin-bottom: 6px;
   }
+  select {
+    font-size: 125%;
+  }
   a.export {
     display: inline-block;
     background-color: $blue;
