--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -107,7 +107,7 @@ a {
   hr {
     border: none;
     height: 1px;
-    margin-bottom: 0;
+    margin: 20px 0 0;
     background-color: #444;
   }
   h1 {
@@ -117,6 +117,11 @@ a {
   }
   h1 {
     padding: 15px;
+  }
+  label.radio-label {
+    position: relative;
+    bottom: -0.1em;
+    left: 0.5em;
   }
   .scroll-ui {
     overflow: scroll;
