Increase spacing in modal

--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -201,12 +201,12 @@ a {
     left: 50%;
     top: 50%;
     color: white;
-    padding: 15px;
+    padding: 50px;
     font-size: 1.2em;
     transform: translateX(-50%) translateY(-50%);
     background-color: #1a1a1a;
     a {
-      padding: 15px;
+      padding: 2em 0.5em 0;
     }
   }
 }
