Display resolution per tile for imported files

--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -143,6 +143,10 @@ a {
       padding-bottom: 20px;
     }
   }
+  .import-metric {
+    font-size: 85%;
+    opacity: 0.6;
+  }
   .csv-input {
     margin-top: 15px;
     textarea {
