--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -271,6 +271,10 @@ table {
       opacity: 0.3;
     }
   }
+  tr.disabled {
+    pointer-events: none;
+    opacity: 0.3;
+  }
   td {
     padding: 0.3em;
   }
