--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -16,6 +16,7 @@ body {
   font-weight: 400;
   font-size: 15px;
   color: #1a1a1a;
+  background-color: $ui-background-color;
 }
 
 * {
@@ -64,6 +65,10 @@ select {
 }
 
 input[type="radio"]{
+  display: none;
+}
+
+.mobile-redirect {
   display: none;
 }
 
@@ -398,6 +403,75 @@ fieldset {
     display: none;
   }
 }
+
+// https://css-tricks.com/snippets/css/media-queries-for-standard-devices/
+@media
+only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2), // iPhone4
+only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2), // iPhone5
+only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2), // iPhone6
+only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3), // iPhone6+
+screen and (device-width: 320px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 2), // galaxyS3
+screen and (device-width: 320px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3), // galaxyS4
+screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3), // galaxyS5 / HTC
+only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1), // iPad mini, 1, 2
+only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2), // iPad 3,4
+(min-device-width: 800px) and (max-device-width: 1280px), //galaxy tablets
+screen and (device-width: 601px) and (device-height: 906px) and (-webkit-min-device-pixel-ratio: 1.331) and (-webkit-max-device-pixel-ratio: 1.332) //nexus tablets
+{
+  .credits {
+    z-index: 100;
+    padding: 15px;
+    background-color: #fdfdfd;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    font-size: 1.2em;
+    line-height: 1.4em;
+    .source {
+      display: none;
+    }
+  }
+  .mobile-redirect {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    background-color: rgba(0,141,247,0.9);
+    .tilegrams-logo {
+      width: 2em;
+      height: 2em;
+      margin: 0 0.4em 0 0.2em;
+      transform: translateY(20%);
+    }
+    .main {
+      position: relative;
+      max-width: 90%;
+      left: 50%;
+      top: 40%;
+      color: #1a1a1a;
+      padding: $ui-margin $ui-margin $ui-margin / 2 $ui-margin;
+      font-size: 1em;
+      transform: translateX(-50%) translateY(-50%);
+      color: $ui-background-color;
+      h1 {
+        font-size: 2em;
+        display: inline-block;
+        padding: 0 0 0.5em 0;
+      }
+      h2 {
+        font-size: 1.5em;
+        padding: 0 0 0.5em 0;
+      }
+      h3 {
+        font-size: 1em;
+      }
+    }
+  }
+}
+
 
 // dat.gui
 .dg.ac {
