adjust export label position

--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -370,12 +370,12 @@ fieldset {
     background-color: #1a1a1a;
     border-radius: 2px;
     padding: 0.5em 0.75em;
-    margin: 0.5em 0;
+    margin: 0.5em 10px;
     color: white;
     text-align: center;
     img {
-      width: 1em;
-      height: 1em;
+      width: 1.2em;
+      height: 1.2em;
       margin-left: 15px;
     }
   }
