--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -1,498 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 @import 'reset';
-
-$font-stack: 'Roboto', sans-serif;
-$sidebar-width: 320px;
-$blue: #3939a5;
-$gray: #4d4d4d;
-$light-gray: #d0d2d3;
-$very-light-gray: #f1f1f2;
-$ui-background-color: #fdfdfd;
-$ui-margin: 25px;
-
-body {
-  margin: 0;
-  font-family: $font-stack;
-  font-weight: 400;
-  font-size: 15px;
-  color: #1a1a1a;
-  background-color: $ui-background-color;
-}
-
-* {
-  -webkit-touch-callout:none;
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
-  user-select:none;
-}
-
-.code, input, textarea{
-  -webkit-touch-callout:default;
-  -webkit-user-select:text;
-  -moz-user-select:text;
-  -ms-user-select:text;
-  user-select:text;
-}
-
-a {
-  color: $blue;
-  margin: 0 5px;
-  cursor: pointer;
-}
-
-.gray {
-  color: $gray;
-}
-
-select {
-  width: 100%;
-  -webkit-appearance: none;
-  -webkit-border-radius: 0px;
-  -moz-appearance: none;
-  appearance: none;
-  background: url('../images/arrow.svg') no-repeat 97% 50% #ffffff;
-  background-size: 1em 0.5em;
-  border: none;
-  background-color: $very-light-gray;
-  color: #1a1a1a;
-  font-size: 100%;
-  font-weight: 300;
-  cursor: pointer;
-  &:focus {
-    outline: none;
-  }
-}
-
-input[type="radio"]{
-  display: none;
-}
-
-.mobile-redirect {
-  display: none;
-}
-
-.code {
-  font-family: "Lucida Console", Monaco, monospace;
-  background-color: $light-gray;
-  padding: 10px;
-  margin: 10px;
-  font-size: 80%;
-  line-height: 110%;
-}
-
-.padding-bottom {
-  padding-bottom: 10px;
-}
-
-.collapsed {
-  display: none;
-}
-
-.step {
-  position: relative;
-  cursor: pointer;
-  font-size: 1.15em;
-  padding: 15px $ui-margin;
-  line-height: 1.25em;
-  .arrow {
-    width: 1em;
-    height: 1em;
-    background: url(../images/caret.svg) no-repeat center center;
-    background-size: 1em 1em;
-    float: right;
-    transition: transform 500ms ease-in-out;
-  }
-  &.active {
-    .arrow {
-      transform: rotateX(180deg);
-    }
-  }
-}
-
-#canvas {
-  position: fixed;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  left: $sidebar-width;
-  overflow: hidden;
-  z-index: -1;
-  canvas {
-    cursor: pointer;
-    background-color: #f0f0f0;
-  }
-}
-
-.credits {
-  position: fixed;
-  bottom: 5px;
-  left: $sidebar-width;
-  right: 5px;
-  font-size: 9pt;
-  text-align: right;
-  .gnl-logo {
-    display: inline-block;
-    height: 1.2em;
-    margin-bottom: -4px;
-  }
-}
-
-.header {
-  position: fixed;
-  width: 100%;
-  background: #1a1a1a;
-  z-index: 1;
-  display: table;
-}
-h1 {
-  font-size: 120%;
-  line-height: 1.2em;
-  padding: $ui-margin / 2 $ui-margin;
-  color: $ui-background-color;
-  letter-spacing: .15em;
-  display: inline-block;
-  display: table-cell;
-}
-.tilegrams-logo {
-  width: 1.2em;
-  height: 1.2em;
-  margin: 0 0.4em 0 0.2em;
-  transform: translateY(20%);
-}
-.by-pitch {
-  font-size: 60%;
-  letter-spacing: .08em;
-  font-weight: 300;
-}
-.share {
-  display: table-cell;
-  img {
-    width: 1.2em;
-    height: 1.2em;
-    float: right;
-    padding-right: 20px;
-  }
-  clear: both;
-}
-
-#ui {
-  position: absolute;
-  min-height: 100%;
-  border-right: 2px solid $light-gray;
-}
-#ui .column {
-  width: $sidebar-width;
-  background-color: $ui-background-color;
-  overflow-x: hidden;
-  overflow-y: auto;
-  font-size: 0.85em;
-  font-weight: 400;
-  padding-top: 4em;
-  hr {
-    border: none;
-    height: 1px;
-    background-color: $light-gray;
-    margin: 0;
-  }
-  p.intro {
-    margin: $ui-margin;
-    opacity: 0.8;
-    line-height: 1.2em;
-    a {
-      text-decoration: none;
-      margin: 0;
-    }
-  }
-  label.radio-label {
-    cursor: pointer;
-    padding-top: 12px;
-    display: block;
-    width: 100%;
-    &:hover {
-      opacity: 0.6;
-    }
-  }
-  .scroll-ui {
-    overflow: scroll;
-  }
-  .ui-controls {
-    overflow: hidden;
-    .ui-control-type {
-      padding-bottom: 20px;
-    }
-    .import {
-      padding: 0 $ui-margin 12px $ui-margin;
-      &.active {
-        background-color: $very-light-gray;
-        border-left: 3px solid $gray;
-        padding-left: $ui-margin - 3px;
-        label.radio-label {
-          &:hover {
-            opacity: 1;
-          }
-        }
-      }
-    }
-    input.import {
-      padding: 0;
-    }
-  }
-  .import-metric {
-    font-size: 85%;
-    opacity: 0.6;
-    color: $blue;
-    font-weight: 500;
-  }
-  .csv-input {
-    margin-top: 15px;
-    textarea {
-      width: 100%;
-      margin-top: 10px;
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-  .dataset-select {
-    width: 100%;
-  }
-  .instruction {
-    margin-top: 10px;
-  }
-  .resolution-slider {
-    label {
-      display: block;
-    }
-    .hex-img {
-      width: 1.5em;
-      height: 1.5em;
-      display: inline-block;
-    }
-    .small-hex {
-      float: left;
-    }
-    .big-hex {
-      float: right;
-    }
-  }
-  .resolution-slider input {
-    width: 100%;
-    cursor: pointer;
-  }
-  .resolution-input {
-    input {
-      min-width: 50%;
-      border: none;
-      font-size: 1.1em;
-      border-bottom: 1px solid $light-gray;
-      margin: 0 5px 0 0;
-      color: $blue;
-      &:focus {
-        outline: none;
-        border-bottom: 1px solid $gray;
-      }
-    }
-  }
-  .metrics {
-    padding: 0 $ui-margin;
-    overflow: scroll;
-    label {
-      padding-left: 5px;
-    }
-  }
-  #metrics-header {
-    padding-bottom: 0.5em;
-    cursor: pointer;
-  }
-  #warning {
-    font-size: 0.8em;
-    padding-top: 10px;
-    line-height: 1.2em;
-    i {
-      padding-right: 0.5em;
-    }
-  }
-  .download {
-    .instruction {
-      margin: 0 $ui-margin;
-      line-height: 1.2em;
-    }
-    fieldset {
-      display: block;
-      margin-left: 15px;
-      margin-bottom: $ui-margin / 2;
-    }
-  }
-}
-
-.modal-edit-warning {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 99999;
-  background-color: rgba(0,0,0,0.3);
-  border: 1px solid $gray;
-  .warning-text {
-    position: relative;
-    max-width: 400px;
-    left: 50%;
-    top: 50%;
-    color: #1a1a1a;
-    padding: $ui-margin $ui-margin $ui-margin / 2 $ui-margin;
-    font-size: 1em;
-    transform: translateX(-50%) translateY(-50%);
-    background-color: $ui-background-color;
-    line-height: 1.2em;
-    a {
-      padding: 0.3em;
-      margin-top: 0.6em;
-      background-color: black;
-      color: white;
-      border-radius: 2px;
-      min-width: 40%;
-      text-align: center;
-    }
-  }
-}
-
-fieldset {
-  padding: 10px 15px 0px 0px;
-  label {
-    display: inline-block;
-    width: $sidebar-width * 0.3;
-    margin-bottom: 6px;
-  }
-  a.export {
-    display: block;
-    background-color: #1a1a1a;
-    border-radius: 2px;
-    padding: 0.5em 0.75em;
-    margin: 0.5em 10px;
-    color: white;
-    text-align: center;
-    img {
-      width: 1.2em;
-      height: 1.2em;
-      margin-left: 15px;
-    }
-  }
-  a.import {
-    margin: 0;
-  }
-}
-
-.metrics-wrapper {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  .metrics-box {
-    text-align: center;
-    flex-basis: 18%;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    font-size: 90%;
-    border: 1px solid $very-light-gray;
-    padding: 3px 0;
-    margin: 3px auto;
-    box-shadow: 1px 1px 2px $very-light-gray;
-    div {
-      padding: 2px 0;
-    }
-  }
-  .metrics-box.fade {
-    box-shadow: none;
-    div:not(:first-child) {
-      opacity: 0.3;
-    }
-  }
-  .metrics-box.disabled {
-    pointer-events: none;
-    opacity: 0.3;
-  }
-}
-.metrics.hide-null {
-  .metrics-box.fade {
-    display: none;
-  }
-}
-
-// https://css-tricks.com/snippets/css/media-queries-for-standard-devices/
-@media
-only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2), // iPhone4
-only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2), // iPhone5
-only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2), // iPhone6
-only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3), // iPhone6+
-screen and (device-width: 320px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 2), // galaxyS3
-screen and (device-width: 320px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3), // galaxyS4
-screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3), // galaxyS5 / HTC
-only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1), // iPad mini, 1, 2
-only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2), // iPad 3,4
-(min-device-width: 800px) and (max-device-width: 1280px), //galaxy tablets
-screen and (device-width: 601px) and (device-height: 906px) and (-webkit-min-device-pixel-ratio: 1.331) and (-webkit-max-device-pixel-ratio: 1.332) //nexus tablets
-{
-  .credits {
-    z-index: 100;
-    padding: 15px;
-    background-color: #fdfdfd;
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    text-align: center;
-    font-size: 1.2em;
-    line-height: 1.4em;
-    .source {
-      display: none;
-    }
-  }
-  .mobile-redirect {
-    display: block;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 99;
-    background-color: rgba(0,141,247,0.9);
-    .tilegrams-logo {
-      width: 2em;
-      height: 2em;
-      margin: 0 0.4em 0 0.2em;
-      transform: translateY(20%);
-    }
-    .main {
-      position: relative;
-      max-width: 90%;
-      left: 50%;
-      top: 40%;
-      color: #1a1a1a;
-      padding: $ui-margin $ui-margin $ui-margin / 2 $ui-margin;
-      font-size: 1em;
-      transform: translateX(-50%) translateY(-50%);
-      color: $ui-background-color;
-      h1 {
-        font-size: 2em;
-        display: inline-block;
-        padding: 0 0 0.5em 0;
-      }
-      h2 {
-        font-size: 1.5em;
-        padding: 0 0 0.5em 0;
-      }
-      h3 {
-        font-size: 1em;
-      }
-    }
-  }
-}
-
-#stats {
-  z-index: 2;
-}
-// dat.gui
-.dg.ac {
-  pointer-events: none;
-}
+@import 'variables';
+@import 'base';
+@import 'header';
+@import 'ui';
+@import 'modal';
+@import 'mobile';
