add drag and drop to ui, fix various bugs caused by dragging selected tiles off the screen, causing new tiles to render on the map before the cursor is on the map

--- a/source/css/ui.scss
+++ b/source/css/ui.scss
@@ -56,6 +56,15 @@ fieldset {
   }
 }
 
+.dragging-hex {
+  position: absolute;
+  transform: translateX(-50%) translateY(-50%);
+  svg polygon {
+    stroke: #000;
+    stroke-width: 1px;
+  }
+}
+
 #ui {
   position: absolute;
   min-height: 100%;
