--- a/source/css/ui.scss
+++ b/source/css/ui.scss
@@ -62,6 +62,7 @@ fieldset {
   svg polygon {
     stroke: #000;
     stroke-width: 1px;
+    opacity: 0.4;
   }
 }
 
@@ -247,6 +248,9 @@ fieldset {
     box-shadow: 1px 1px 2px $very-light-gray;
     div {
       padding: 2px 0;
+    }
+    svg polygon {
+      stroke: $light-gray;
     }
   }
   .metrics-box.fade {
