adjust grays to match palette

--- a/source/css/base.scss
+++ b/source/css/base.scss
@@ -55,7 +55,7 @@ input[type="radio"]{
   z-index: -1;
   canvas {
     cursor: pointer;
-    background-color: #f0f0f0;
+    background-color: $canvas-background-color;
   }
 }
 
