--- a/source/css/variables.scss
+++ b/source/css/variables.scss
@@ -6,3 +6,4 @@ $light-gray: #d0d2d3;
 $very-light-gray: #f1f1f2;
 $ui-background-color: #fdfdfd;
 $ui-margin: 25px;
+$canvas-background-color: #f3f3f3;
