add manual to app

--- a/source/css/ui.scss
+++ b/source/css/ui.scss
@@ -78,7 +78,7 @@ fieldset {
   overflow-y: auto;
   font-size: 0.85em;
   font-weight: 400;
-  padding-top: 4em;
+  padding-top: $header-height;
   hr {
     border: none;
     height: 1px;
