--- a/source/css/variables.scss
+++ b/source/css/variables.scss
@@ -1,5 +1,6 @@
 $font-stack: 'Roboto', sans-serif;
 $sidebar-width: 320px;
+$header-height: 55px;
 $blue: #3939a5;
 $gray: #4d4d4d;
 $light-gray: #d0d2d3;
