also hide no data stats when toggle hide

--- a/source/css/ui.scss
+++ b/source/css/ui.scss
@@ -265,7 +265,7 @@ fieldset {
   }
 }
 .metrics.hide-null {
-  .metrics-box.fade {
+  .metrics-box.fade, .metrics-box.disabled {
     display: none;
   }
 }
