--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -1,290 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 @import 'reset';
-
-$font-stack: 'Fira Sans', sans-serif;
-$sidebar-width: 320px;
-$blue: #5656f7;
-$ui-background-color: #1a1a1a;
-$ui-margin: 25px;
-
-body {
-  margin: 0;
-  font-family: $font-stack;
-  font-weight: 400;
-}
-
-a {
-  color: $blue;
-  margin: 0 5px;
-  cursor: pointer;
-}
-
-.code {
-  font-family: "Lucida Console", Monaco, monospace;
-  background-color: rgba(255,255,255,0.1);
-  padding: 10px;
-  margin: 10px;
-  font-size: 80%;
-  line-height: 110%;
-}
-
-.padding-bottom {
-  padding-bottom: 20px;
-  box-sizing: border-box;
-}
-
-.collapsed {
-  display: none;
-}
-
-.step {
-  position: relative;
-  cursor: pointer;
-  margin-bottom: 10px;
-  p {
-    padding: 15px $ui-margin;
-    line-height: 1.25em;
-    span {
-      margin-right: 0.5em;
-      font-weight: 700;
-    }
-  }
-  .highlight-bar {
-    position: absolute;
-    bottom: 0px;
-    width: 0px;
-    height: 100%;
-    background-color: $blue;
-    transition: width 0.22s ease-in-out;
-  }
-  &:hover {
-    .highlight-bar {
-      width: 3px;
-    }
-  }
-  &.active {
-    .highlight-bar {
-      width: 6px;
-    }
-  }
-}
-
-#canvas {
-  position: fixed;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  left: $sidebar-width;
-  overflow: hidden;
-  canvas {
-    cursor: pointer;
-    background-color: #f0f0f0;
-  }
-}
-
-.credits {
-  position: fixed;
-  bottom: 5px;
-  left: $sidebar-width;
-  right: 0;
-  font-size: 9pt;
-  text-align: center;
-
-  .gnl-logo {
-    display: inline-block;
-    height: 1.2em;
-    margin-bottom: -4px;
-  }
-}
-
-#ui .column {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: calc(100% - #{$sidebar-width});
-  background-color: $ui-background-color;
-  color: #fff;
-  overflow-x: hidden;
-  overflow-y: auto;
-  hr {
-    border: none;
-    height: 1px;
-    margin: 20px 0 0;
-    background-color: #444;
-  }
-  h1 {
-    font-size: 200%;
-    line-height: 1.2em;
-    padding: $ui-margin;
-  }
-  p.intro {
-    margin: 0 $ui-margin;
-    font-weight: 300;
-    line-height: 1.5em;
-    opacity: 0.8;
-    a {
-      text-decoration: none;
-      font-weight: 400;
-      margin: 0;
-    }
-  }
-  label.radio-label {
-    position: relative;
-    bottom: -0.1em;
-    left: 0.5em;
-  }
-  .scroll-ui {
-    overflow: scroll;
-  }
-  .ui-controls {
-    padding: 0 $ui-margin;
-    .ui-control-type {
-      padding-bottom: 20px;
-    }
-  }
-  .import-metric {
-    font-size: 85%;
-    opacity: 0.6;
-  }
-  .csv-input {
-    margin-top: 15px;
-    textarea {
-      width: 100%;
-      margin-top: 10px;
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-  .dataset-select {
-    width: 100%;
-  }
-  .instruction {
-    margin-top: 10px;
-  }
-  .resolution-slider input {
-    width: 100%;
-  }
-  .resolution-input {
-    label {
-      margin-bottom: 0;
-    }
-    input {
-      border: none;
-      font-size: 1.1em;
-      border-bottom: 1px solid #fff;
-      background-color: #1a1a1a;
-      color: #fff;
-      padding: 0px 0 3px 0;
-      width: 100%;
-      text-align: right;
-      &:focus {
-        outline: none;
-        border-bottom: 1px solid $blue;
-      }
-    }
-  }
-  .metrics {
-    padding: 0 $ui-margin;
-    overflow: scroll;
-  }
-  #metrics-header {
-    margin-left: 0.5em;
-    padding-bottom: 0.5em;
-  }
-  #warning {
-    font-size: 0.8em;
-    padding-top: 10px;
-    line-height: 1.2em;
-    i {
-      padding-right: 0.5em;
-    }
-  }
-}
-
-.modal-edit-warning {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 99999;
-  background-color: rgba(0,0,0,0.3);
-  .warning-text {
-    position: relative;
-    max-width: 400px;
-    left: 50%;
-    top: 50%;
-    color: white;
-    padding: 50px;
-    font-size: 1.2em;
-    transform: translateX(-50%) translateY(-50%);
-    background-color: #1a1a1a;
-    a {
-      padding: 2em 0.5em 0;
-    }
-  }
-}
-
-fieldset {
-  padding: 10px 15px 10px 25px;
-  label {
-    display: inline-block;
-    width: $sidebar-width * 0.3;
-    margin-bottom: 6px;
-  }
-  select {
-    font-size: 125%;
-  }
-  a.export {
-    display: inline-block;
-    background-color: $blue;
-    border-radius: 5px;
-    padding: 0.5em 0.75em;
-    margin: 0 0.25em;
-    color: white;
-  }
-  a.import {
-    margin: 0;
-  }
-  input.import {
-    margin-top: 10px;
-  }
-}
-
-.no-scroll-ui {
-  fieldset {
-    display: inline-block;
-  }
-}
-
-table {
-  width: 100%;
-  table-layout: fixed;
-  text-align: center;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  tr.fade {
-    td:not(:first-child) {
-      opacity: 0.3;
-    }
-  }
-  tr.disabled {
-    pointer-events: none;
-    opacity: 0.3;
-  }
-  td {
-    padding: 0.3em;
-  }
-  td:first-child {
-    width: 0%;
-  }
-}
-
-// dat.gui
-.dg.ac {
-  z-index: 1;
-  pointer-events: none;
-}
+@import 'variables';
+@import 'base';
+@import 'manual';
+@import 'header';
+@import 'ui';
+@import 'modal';
+@import 'mobile';
